2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Add missing noreturn
	on show_error.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/disk.c (grub_disk_write): Add missing const qualifier.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_ls): Add missing var init.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/bin2h.c (usage): Add missing attribute noreturn.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/testload.c (grub_cmd_testload): Fix overflow
	if the size isn't divisible by 512.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Make list_push and list_remove functions rather than inline functions
	to decrease size and avoid aliasing violations.

	* include/grub/list.h (grub_list_push): Move to ...
	* grub-core/kern/list.c (grub_list_push): ... here. Don't inline.
	* include/grub/list.h (grub_list_remove): Move to ...
	* grub-core/kern/list.c (grub_list_remove): ... here. Don't inline.

2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Disable for now -Wstack-protector, -Wunreachable-code
	and -Wunused-result.

2012-02-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_cmd_deladdr): Fix index.
	Reported by: Seth Goldberg

2012-02-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -fno-builtin-gettext on host if NLS is disabled.

2012-02-19  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub-mkconfig.in (GRUB_CMDLINE_GNUMACH): Export variable.
	* util/grub.d/10_hurd.in: Include GRUB_CMDLINE_GNUMACH in gnumach
	command line.
	* docs/grub.texi (Simple configuration): Document
	GRUB_CMDLINE_GNUMACH.

2012-02-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (platform_SCRIPTS): New variable.
	(platform_PROGRAMS): Likewise.
	* gentpl.py: Mark *,module and *.image for install.